Fix iOS flicker

--- a/source/styles/modules/components.styl
+++ b/source/styles/modules/components.styl
@@ -97,6 +97,25 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .3s ease;
+}
+
+.fade-enter, .fade-leave-to
+/* .component-fade-leave-active for <2.1.8 */ {
+  opacity: 0;
+}
+
 .container {
     display: flex;
     width: 100vw;
@@ -104,7 +123,7 @@
 }
 
 .animate {
-    transition: transform .25s;
+    transition: transform .25s cubic-bezier(0.25, 0, 1, 1);
 }
 
 .page {
@@ -123,8 +142,9 @@ img {
 
 .page.previous,
 .page.current {
-    box-shadow: 5px 0 20px rgba(0,0,0, .5), 20px 0 100px rgba(0,0,0, .2)
+    box-shadow: 5px 0 20px rgba(0, 0, 0, .5), 20px 0 100px rgba(0, 0, 0, .2)
 }
+
 .page.previous {
     left: -100%;
     z-index: 3
